k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: parcinfo
  labels:
    name: parcinfo
    app: parcinfo
